<resources>
    <string name="app_name">TStudy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="longstring">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hiddeThe standard Lorem Ipsum passage, used since the 1500s
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."

Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"

1914 translation by H. Rackham
"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"

n in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="singUp">Đăng kí</string>
    <string name="password">Mật khẩu</string>
    <string name="name">Tên hiển thị</string>
    <string name="createAccount">Tạo tài khoản của bạn</string>
    <string name="ifNotAcccount">Bạn chưa có tài khoản?</string>
    <string name="gotAccount">Bạn đã có tài khoản?</string>
    <string name="saveAccount">Lưu mật khẩu</string>
    //
    <string name="loginSuccess">Đăng nhâp thành công.</string>
    <string name="incorrectAccount">Thông tin tài khoản không chính xác!</string>
    <string name="pleaseTypeFull">Vui lòng nhập đầy đủ thông tin!</string>
    //
    <string name="registerSuccess">Đăng kí thành công.</string>
    <string name="userExist">Tài khoản này đã tồn tại!</string>
    <string name="somethingWrong">Đã có lỗi xảy ra. Vui lòng thử lại!</string>
    //
    <string name="member"> thành viên</string>
    <string name="word"> Từ vựng</string>
    //
    <string name="youDontHaveCourse">Bắt đầu học tập thôi nào!</string>
    <string name="createCourse">Tạo học phần</string>
    <string name="joinCourse">Tham gia học phần</string>
    <string name="inputNameCourse">Nhập tên học phần</string>
    <string name="inputTopicCourse">Nhập chủ đề</string>
    <string name="friendsCourse">Bạn bè</string>
    <string name="search">Search</string>
    <string name="searchCourse">Tìm kiếm học phần</string>
    <string name="searchCourseCreate">Tìm kiếm học phần đã tạo</string>
    <string name="inviteCourses">Lời mời tham gia</string>
    <string name="titleCreateCourse">Tạo học phần</string>
    <string name="yourVocabulary">Từ vựng của bạn</string>
    <string name="inviteFriend">Mời bạn bè</string>
    <string name="meaning">Nghĩa</string>
</resources>
