<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:layout_centerInParent="true"
    android:elevation="5dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/viewPagerCard"
    app:layout_scrollFlags="scroll|enterAlways">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_notify"
            android:gravity="start"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youDontHaveCourse"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btn_createCourse"/>
        <com.google.android.material.button.MaterialButton
            app:rippleColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:id="@+id/btn_createCourse"
            android:textColor="@color/colorAccent1"
            android:text="@string/createCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_notify"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_joinCourse"/>
        <com.google.android.material.button.MaterialButton
            app:rippleColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:id="@+id/btn_joinCourse"
            android:textColor="@color/colorAccent1"
            android:text="@string/joinCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_notify"
            app:layout_constraintLeft_toRightOf="@id/btn_createCourse"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>