<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:textSize="30sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/clickedColor"
            android:layout_gravity="center"
            />
        <ProgressBar
            android:layout_width="match_parent"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/pbRegisterLoading"
            android:indeterminate="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="20dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textSize="12sp"/>
            <EditText
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/edt_nameDisplay"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_edt"
                android:hint="Your display name or email"
                android:elevation="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:drawableStart="@drawable/ic_namedisplay"
                android:inputType="text"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="User Name"
                android:textSize="12sp"/>
            <EditText
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_edt"
                android:hint="Input your name"
                android:elevation="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:drawableStart="@drawable/ic_user"
                android:inputType="text"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:text="@string/password"
                android:textSize="12sp"/>
            <EditText
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_edt"
                android:hint="Input password"
                android:elevation="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:autofillHints="" />
            <Button
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:id="@+id/btn_signUp1"
                android:layout_gravity="bottom|center"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/singUp"
                android:textColor="@android:color/white"
                android:elevation="10dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed-light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gotAccount"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <Button
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_button_1"
                android:id="@+id/btn_login1"
                android:layout_gravity="bottom|center"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/clickedColor"
                android:elevation="10dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed-light"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>